# kit

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md  build.py  fmt  networking_bench.sh  package.json  run_tests.sh
examples/: example_array.c  example_atom.c  example_atom.c.old  example_hash_map.c  example_http.c  example_list.c  example_list.c.old  example_map.c  example_map.c.old  example_sequence.c  example_sequence.c.old  example_string.c  example_string.c.old  example_vector.c  person.c
include/: kit.h
include/kit/: allocator.h  compiler_steroids.h  cta.h  dbg.h  error.h  errors.h  kit.h  pp.h  require.h  trace.h  types.h  utils.h
include/kit/__experimental__/allocator/: ext.h
include/kit/alloc/: errors.h  result.h
include/kit/allocator/: allocator.h  allocator_config.h  allocator_selector.h  system.h
include/kit/collections/: array.h  atom.h  atom.h.old  bound.h  deque.h  doubly_list.h  doubly_list.h.old  hash_map.h  hat.h  hat_config.h  list.h  map.h  pair.h  queue.h  queue.h.old  result.h  sequence.h  singly_list.h  stack.h  string.h  string.h.old  string_config.h  text.h  vector.h  vector_config.h  vector_config.h.old  xor_list.h  xor_list.h.old
include/kit/memory/: layout.h
include/kit/networking/: http.h  http_method.h  http_request.h  http_response.h  http_status.h
include/kit/system/: allocator.h
sources/: allocator.c  array.c  atom.c  doubly_list.c  errors.c  hash_map.c  http.c  http_method.c  http_request.c  http_response.c  http_status.c  kit.c  list.c  map.c  map.c.old  pair.c  queue.c  result.c  sequence.c  singly_list.c  singly_list.c.old  stack.c  stack.c.old  string.c  utils.c  vector.c  xor_list.c  xor_list.c.old
src/: allocator.c  require.c
src/__experimental__/allocator/: ext.c
src/__experimental__/system/allocator/: ext.c
src/alloc/: errors.c  result.c
src/allocator/: system.c
src/system/: allocator.c
tests/seeds/: seeds.c  seeds.h
tests/unit/array/: test_array.c
tests/unit/array/features/: feature_getters.c  feature_getters.h  feature_setters.c  feature_setters.h
tests/unit/array/fixtures/: fixture_array.c  fixture_array.h
tests/unit/atom/: test_atom.c
tests/unit/list/: test_list.c  test_list_iterator.c
tests/unit/list/features/: feature_getters.c  feature_getters.h  feature_growable.c  feature_growable.h  feature_insert.c  feature_insert.h  feature_iterable.c  feature_iterable.h  feature_remove.c  feature_remove.h  feature_setters.c  feature_setters.h
tests/unit/list/fixtures/: fixture_list.c  fixture_list.h  fixture_list_context.h
tests/unit/map/: test_map.c  test_map_iterator.c
tests/unit/map/features/: feature_insert.c  feature_insert.h  feature_iterable.c  feature_iterable.h  feature_remove.c  feature_remove.h
tests/unit/map/fixtures/: fixture_map.c  fixture_map.h  fixture_map_context.h
tests/unit/networking/: test_request.c  test_response.c
tests/unit/old/atom/: test_atom.c
tests/unit/old/list/: test_list.c
tests/unit/old/pair/: test_pair.c
tests/unit/old/queue/: test_queue.c
tests/unit/old/sequence/: test_sequence.c  test_sequence_iterator.c
tests/unit/pair/: test_pair.c
tests/unit/queue/: test_queue.c
tests/unit/queue/features/: feature_insert.c  feature_insert.h  feature_remove.c  feature_remove.h
tests/unit/queue/fixtures/: fixture_queue.c  fixture_queue.h
tests/unit/sequence/: test_sequence.c  test_sequence_iterator.c
tests/unit/stack/: test_stack.c
tests/unit/string/: test_string.c
(+68 files in other folders)
